# BaiMotorLib

./: .gitignore  CMakeLists.txt  README.md  a.c  main copy 2.c  main copy 3.c  main copy.c  main.c  test.py
BaiMotorLib for py/: README.md  drivers_test.py  sim.py  simulation_result.csv
BaiMotorLib for py/BaiMotorLib/: __init__.py
BaiMotorLib for py/BaiMotorLib/common/: __init__.py  constants.py  motor.py  motor_manager.py  motorlib_time_sys.py
BaiMotorLib for py/BaiMotorLib/controllers/: __init__.py  controller.py
BaiMotorLib for py/BaiMotorLib/controllers/virtual/: pyqt5_controller.py
BaiMotorLib for py/BaiMotorLib/drivers/: __init__.py  driver.py
BaiMotorLib for py/BaiMotorLib/drivers/virtual/: __init__.py  pyqt5_motor.py  pyqt5_sensor.py
BaiMotorLib for py/MotorSimulation/: __init__.py  qt5_simulation_ui.py  simulation_core.py
BaiMotorLib/common/: motor.c  motorlib_time_sys.c
BaiMotorLib/common/include/: motor.h
BaiMotorLib/controllers/: controller.c  controller.h
BaiMotorLib/controllers/openloop/: openloop.c  openloop.h
BaiMotorLib/drivers/dc_motor/test_drv/: test_drv.c  test_drv.h
BaiMotorLibV1/common/: motor.c  motor_manager.c
BaiMotorLibV1/include/common/: motor_manager.h  motorlib_time_sys.h
BaiMotorLibV1/include/controllers/: controller.h
BaiMotorLibV1/include/drivers/: driver.h
